added future work

--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -28,33 +28,40 @@ In \autoref{cha:faraday} we developed an interpretable Faraday complexity classi
 \section{Implications for wide-area radio surveys}
 \label{sec:implications-wide-area-radio-surveys}
 
-    As we move toward larger and larger datasets, an important question is how applicable our models will be across the sky. Our results in \autoref{cha:cross-id} showed that we can expect some generalisation, as our model trained on one patch of sky was applicable to another without a great loss of performance. Similarly, our classifier trained on part of FIRST seemed to work well on the rest of the dataset. This is promising as it implies that limited area surveys may provide 
+    As we move toward larger and larger datasets, an important question is how applicable our models will be across the sky. Our results in \autoref{cha:cross-id} showed that we can expect some generalisation, as our model trained on one patch of sky was applicable to another without a great loss of performance. Similarly, our classifier trained on part of FIRST seemed to work well on the rest of the dataset. This is promising as it implies that limited area surveys may help develop training sets that generalise to the whole sky, potentially making the process of generating training sets considerably cheaper.
 
     Between \autoref{cha:cross-id} and \autoref{cha:rlfs} we demonstrated that a large set of good quality, complex data is required for training good astroinformatics algorithms. Pilot datasets like ATLAS will not work by themselves: the sources they contain are too simple and their complex sources are too few. A sensible question to ask is, could we simulate data for training purposes? We trained our classifier in \autoref{cha:faraday} on simulated data and found that it was difficult to bridge the domain gap between simulation and observation, even in a well-understood, one-dimensional case---let alone the complex three-dimensional projected morphologies we observe in imagery. Getting across this domain gap will be difficult and will necessarily be a major topic of research in the astroinformatics field in the near future.
 
-    Tying observations, simulations, and models together are the representation of the data: features. Our results in \autoref{cha:faraday} show that judicious choice of features 
+    Tying observations, simulations, and models together are the representation of the data: features. Our results in \autoref{cha:faraday} show that judicious choice of features can outperform even complex and powerful models. This is good for two reasons. The first reason is that these features may be more easily interpreted. The meaning of the features may be understood to be representative of some physical property, or at least the relationship between physical reality and predictions may be more easily found. The second reason is that features may be selected which can generalise well to datasets beyond just the training set. In other words, features that are less overfit to the training set. This is of particular concern when developing predictive models on simulated training data, as features being less suited for real data than for simulations is one aspect that may contribute to the domain gap. Choosing good features in astronomy may be more important than in many other fields for which machine learning is applied, as while in most fields it is possible to conduct experiments, in astronomy we only have one Universe to look at. We need to make the best use we can of the limited radio sky.
 
-    This section discusses the links between my work and upcoming wide-area radio surveys, including any predictions I may have for them, and impacts of my work on them.
-    - good generalisation across the sky - from cdfs/elais and first
-    - good, complex data are necessary for training
-    - we need to pick features cleverly to make the best use of the limited radio sky - we only have one, and can't perform repeated experiments like other fields!
-
-\section{What we need to move forward}
-\label{sec:moving-forward}
+% \section{What we need to move forward}
+% \label{sec:moving-forward}
     
-    What does radio astronomy need to be able to press ahead with astroinformatics? From my work what do we need to do to set ourselves up for a solid future field?
+%     What does radio astronomy need to be able to press ahead with astroinformatics? From my work what do we need to do to set ourselves up for a solid future field?
 
 \section{Future Work}
 \label{sec:future}
 
     Where can my work be taken from here?
 
-    - domain gap for training on simulated data for FDFs
-    - domain gap for simulated radio continuum data to augment surveys like ATLAS
-    - apply our cross-identification and Faraday complexity methods to EMU and POSSUM, as well as surveys like LoTSS and GLEAM-X
-    - improve our aggregation method for bxid
-    - generate alternative fractional RLFs, e.g. by ML-derived morphology
-    - incorporate photometric redshifts into calculations from rlf
-    - investigate the link between extended sources and their local environments
-    - apply other crowd aggregation strategies to RGZ
-    - use our insights into FDFs to do other interesting things, like outlier detection, data visualisation, or some new way of qu fitting
+    \begin{itemize}
+        \item Further research is needed to close the domain gap for FDFs. This is an interesting case study as it is such a simple case, where we know essentially all the physics behind the observations and the observations are one-dimensional. Even this is not enough, and whether through unmodelled physics (e.g. more than two screens, depolarisation) or unmodelled observational properties (e.g. radio frequency interference) simulation and observation do not fully line up. This is critical if we want to train machine learning algorithms on simulations in the future, and we very much want to do this to augment our limited observational training data.
+        \item Similarly the domain gap must be reduced for radio continuum imagery. Our results in \autoref{cha:cross-id} show that pilot surveys like ATLAS may not contain enough complex sources to train machine learning models, and while larger surveys like FIRST exist, transferring models from a survey undertaken with one set of observing parameters (telescope, frequency, depth, resolution...) is both non-trivial and as-yet relatively unexplored.
+        \item An obvious target for future work is to apply our cross-identification algorithm to new and upcoming surveys like LoTSS and EMU. These promise a tremendous amount of data with new discoveries certain to be lying in wait within, and cross-identifying the radio emission with its corresponding infrared or optical host galaxy will be vital for uncovering those secrets.
+        \item Our methodology can be improved. Better models almost certainly exist than the CNN we applied to BXID. As we demonstrated in \autoref{cha:faraday}, a well thought-out model and features may best a complex model like the CNN. How would our cross-identification approach worked if, say, we applied it to hand-selected features such as those chosen by \citet{proctor06}? Would a search over more CNN architectures, like that described by \citet{lukic_morphological_2019}, result in better classifiers and hence better cross-identifications? Perhaps we could even improve performance by pre-training on some unlabelled but larger dataset?
+        \item A less obvious improvement to our BXID approach would be to change how the classification scores are aggregated. Currently this is a weighted argmax over candidate host galaxies, but other methods are possible. The weights could be something other than a Gaussian function of distance, from other functions of distance to an entire separate classification model. Maybe we could aggregate the scores in bulk, using some kind of algorithm that assigns radio-host relationships based on not just the radio source itself but also on the other radio sources around it and how they have been paired to their own host galaxies.
+        \item There are many other interesting science questions that can be posed using our RGZ-Ex dataset (\autoref{cha:rlfs}). We demonstrated in \autoref{sec:rlfs-giants} that rare galaxy classes can be identified from within this dataset, including examples that have never before been identified in the literature. Our dataset may be augmented with other features and used to identify unusual objects in a similar way. Besides this, our fractional RLFs could also be extended with any number of galaxy properties. One particularly interesting property could be morphology, as other algorithms in radio astroinformatics are developed which can automatically identify morphologies \citep[e.g.][]{wu19claran}: such a classifier could be used to segment RGZ-Ex and a fractional morphological RLF could be obtained. Of course, there are other properties that are more easily extracted, such as optical lines and colours which could be taken from SDSS using our SDSS cross-identifications.
+        \item Our RLF calculations are severely limited by the availability of redshifts. We limit our analyses to host galaxies that do have available spectroscopic redshifts in SDSS, but we could also employ the less-reliable but considerably more prolific photometric redshifts. These are derived from regression models rather than direct observations of redshifted spectral lines, and so can be produced from photometric surveys without dedicated spectroscopy. However, without methods to handle the uncertainty introduced by photometric redshifts, the resulting RLFs would be unreliable. Developing ways to not only decrease the uncertainty in photometric redshifts but also to understand and incorporate the uncertainty into downstream calculations like those of the RLFs will allow these photometric redshifts to be used and tremendously increase sample sizes. This will be very important for surveys like EMU, which are both deep and wide with low redshift availability.
+        \item Our algorithms in \autoref{cha:cross-id} and \autoref{cha:rlfs} were trained on labels generated by Radio Galaxy Zoo. These labels were aggregated from multiple different labellers (usually 20) by majority vote, with the most common label for any given radio object being assigned as the true label in Radio Galaxy Zoo. This is not the only possible aggregation strategy, though. We employed the Dawid-Skene method \citep{dawid79em} ourselves in \autoref{sec:rlfs-manual-validation} to help assess the performance of our cross-identification algorithm, and this model for example may also be applied to Radio Galaxy Zoo. There are in fact aggregation strategies that work in tandem with a machine learning model to get better labels, such as \citet{raykar_learning_2010}. These methods simultaneously take into account the labels and the labellers, and can accommodate for different levels of ability in the labellers, or different levels of difficulty in the examples being labelled.
+        \item While creating features for FDFs in \autoref{cha:faraday} we demonstrated that W2 distance was a sensible distance measure between FDFs. This is useful for more than just feature construction, as it implies a geometry on the space of FDFs. This distance could be used to help gain insight on the behaviours of future algorithms that work on FDFs. A particularly exciting idea is to improve QU fitting by modifying the distance function to match ours. Our features could also be used to develop other methods for FDF analysis, like outlier detection or data visualisation.
+    \end{itemize}
+
+    % - domain gap for training on simulated data for FDFs
+    % - domain gap for simulated radio continuum data to augment surveys like ATLAS
+    % - apply our cross-identification and Faraday complexity methods to EMU and POSSUM, as well as surveys like LoTSS and GLEAM-X
+    % - improve our aggregation method for bxid
+    % - generate alternative fractional RLFs, e.g. by ML-derived morphology
+    % - incorporate photometric redshifts into calculations from rlf
+    % - investigate the link between extended sources and their local environments
+    % - apply other crowd aggregation strategies to RGZ
+    % - use our insights into FDFs to do other interesting things, like outlier detection, data visualisation, or some new way of qu fitting
